Fixed CSS text align errors
Fixed CSS text align errors

Also removed the beta Web Browser due to the installer not functioning.

--- a/css/credits.css
+++ b/css/credits.css
@@ -22,3 +22,8 @@ p {
 	color: #5B9EFB;
 	font-size: 10px;
 }
+.center {
+	margin-left: auto;
+	margin-right: auto;
+	text-align:center;
+  }
