--- a/css/default.css
+++ b/css/default.css
@@ -23,4 +23,5 @@ a {
 .center {
 	margin-left: auto;
 	margin-right: auto;
+	text-align:center;
   }
