--- a/css/experimentalpagelinksstyle.css
+++ b/css/experimentalpagelinksstyle.css
@@ -79,3 +79,8 @@ html{
   0%{ transform: rotate(0deg); }
     100%{ transform: rotate(360deg); }  
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;
+}
