--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -102,4 +102,5 @@ li.dropdown {
 .center {
   margin-left: auto;
   margin-right: auto;
+  text-align:center;
 }
