--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 
 canvas {
   display: block;
-  vertical-align: bottom;
 }
 
 /* ---- particles.js container ---- */
@@ -62,4 +61,5 @@ canvas {
 .center {
   margin-left: auto;
   margin-right: auto;
+  text-align:center;
 }
